--- a/Lab3/README
+++ b/Lab3/README
@@ -1,4 +1,4 @@
-The README file is a text filw that explains what a project is.
+The README file is a text file that explains what a project is.
 It should contain information on
 
 1. Project Licence
